--- a/styles.css
+++ b/styles.css
@@ -19,42 +19,36 @@ html {
     scroll-behavior: smooth;
 }
 
-
 body {
     font-family: "Poppins", sans-serif;
     line-height: 1.5;
+    color: var(--clr-fg-alt);
+    background-color: var(--clr-bg);
 }
+  .light {
+    --clr-bg: #fcfcfc;
+    --clr-bg-alt: rgb(241, 241, 241);
+    --clr-fg: #555;
+    --clr-fg-alt: #444;
+    --clr-primary: #9847fa;
+    --shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
+  }
 
-
+  .dark {
+    --clr-bg: #1d202a;
+    --clr-bg-alt: #2a2e3c;
+    --clr-fg: #aeaed5;
+    --clr-fg-alt: #d3d3e8;
+    --clr-primary: #bb86fc;
+    --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+      rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  }
 
 .center {
     display: flex;
     justify-content: center;
     align-items: center;
 }
-
-/* Color palette  */
-
-/* Light mode styles */
-.light {
-    --clr-bg: #fcfcfc;
-    --clr-bg-alt: #fff;
-    --clr-fg: #555;
-    --clr-fg-alt: #444;
-    --clr-primary: #9847fa;
-    --shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
-}
-
-/* Dark mode styles */
-.dark {
-  --clr-bg: #fcfcfc;
-  --clr-bg-alt: #fff;
-  --clr-fg: #555;
-  --clr-fg-alt: #444;
-  --clr-primary: #9847fa;
-  --shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
-}
-
 
 h1,
 h2,
@@ -101,36 +95,57 @@ button {
     padding: 0 0 0.3em 0;
     font-weight: 100;
     position: relative;
-}
-  
-.link:hover {
-    color: var(--clr-primary);
+}  
+
+  .link:hover {
+      color: var(--clr-primary);
+  }
+
+.link--icon {
+  color: var(--clr-fg);
+  font-size: 1.6rem;
+  margin-right: 0.8em;
 }
 
 .btn {
   display: block;
-  padding: 0.8em 1.4em;
+  margin-right: 1.5rem;
+  padding: 0.6em 0.8em;
   font-weight: 500;
-  font-size: 0.9rem;
   text-transform: lowercase;
   width: fit-content;
   transition: width 2s ease-in-out;
 }
 
-.btn--outline {
-  color: var(--clr-primary);
-  border: 2px solid var(--clr-primary);
-  border-radius: 20px;
-  position: relative;
-  overflow: hidden;
-  z-index: 1;
-}
+  .btn--outline {
+    color: var(--clr-primary);
+    border: 2px solid var(--clr-primary);
+    border-radius: 7px;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+  }
 
-.btn--outline:focus,
-.btn--outline:hover {
-  color: var(--clr-bg);
-  background-color: var(--clr-primary)
-}
+  .btn--outline:focus,
+  .btn--outline:hover {
+    color: var(--clr-bg);
+    font-weight: 500;
+    background-color: var(--clr-primary)
+  }
+
+  .btn--icon {
+    background-color: transparent;
+    color: var(--clr-fg);
+    font-size: 1.4rem;
+  }
+  
+.grow { 
+  transition: all .2s ease-in-out; 
+  }
+  
+  .grow:hover { 
+  transform: scale(1.2); 
+  }
 
 /*===============
   layout
@@ -190,14 +205,13 @@ button {
   margin: 5% auto 0;
   padding: 5%;
   width: 80%;
-  background-color:rgb(241, 241, 241);
+  background-color: var(--clr-bg-alt);
   border-radius: 25px;
 }
 
 .education__desc {
   display: flex;
   align-items: left;
-  color: var(--clr-fg);
 }
 
 #projects {
@@ -252,7 +266,7 @@ button {
 }
 
 .footer {
-  background-color:rgb(241, 241, 241);
+  background-color:var(--clr-bg-alt);
   padding: 2em;
   margin-top: 3em;
 }
@@ -268,3 +282,15 @@ button {
   font-weight: 500;
   font-size: 0.8rem;
 }
+
+.scroll-top {
+  display: none;
+  position: fixed;
+  bottom: 1em;
+  right: 2em;
+  color: var(--clr-fg);
+  background-color: transparent;
+  font-size: 1.8rem;
+  transition: transform 0.2s ease-in-out;
+}
+
