--- a/styles.css
+++ b/styles.css
@@ -222,24 +222,38 @@ button {
   width: 80%;
 }
 
-.projects__grid {
+.projects__container {
   max-width: 1100px;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 500px 500px;
-  grid-gap: 10px
+  grid-template-columns: repeat(2, 1fr); 
+  grid-gap: 2rem; 
+  align-items: stretch;
 }
 
-.project {
+@media screen and (max-width: 800px) {
+  .projects__container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .projects__container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+}
+
+.project__item {
   padding: 2em;
   margin: 0 auto;
   text-align: center;
-  border-radius: 20px;
+  border-radius: 15px;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
 }
 
-.project:hover {
+.project__item:hover {
   transform: translateY(-7px);
 }
 
@@ -293,4 +307,8 @@ button {
   font-size: 1.8rem;
   transition: transform 0.2s ease-in-out;
 }
+
+/*===============
+  additional screens
+===============*/
 
